@@ -2,8 +2,9 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.07 [20101206] [svn: r170]
+ChangeLog for sdparm-1.07 [20110125] [svn: r171]
   - point out some mode page numbers are vendor specific
+  - LB provisioning + Block limits VPD pages to sbc3r26
 
 ChangeLog for sdparm-1.06 [20101031] [svn: r166]
   - allow upper and lower case in field, (mode and vpd) page,
